--- a/index/bib/thesis.bib
+++ b/index/bib/thesis.bib
@@ -504,8 +504,8 @@
 @Techreport{stocwats:1990,
     Title       = {New Indexes of Coincident and Leading Economic Indicators},
     Author      = {James H.~Stock and Mark W.~Watson},
-    Institution = {National Bureau of Economic Research},
-    Type        = {Working Pape},
+    Institution = {National Bureau of Economic Research {(NBER)}},
+    Type        = {Working Paper},
     Series      = {Reprint Series},
     Number      = {1380},
     Year        = {1990},
@@ -539,4 +539,81 @@
     Volume  = {71},
     Pages   = {135--171},
     DOI     = {10.1111/1468-0262.00392}
+}
+
+@Article{cattel:1966,
+    Author  = {Raymond B.~Cattel},
+    Title   = {The Scree Test for the Number of Factors},
+    Year    = {1966},
+    Journal = {Multivariate Behavioral Research},
+    Volume  = {1},
+    Number  = {2},
+    Pages   = {245--276},
+    DOI     = {10.1207/s15327906mbr0102_10}
+}
+
+@Inbook{perron:2006,
+    Author    = {Pierre Perron},
+  	Title     = {Dealing with Structural Breaks},
+  	Booktitle = {Palgrave Handbook of Econometrics},
+  	Publisher = {Palgrave MacMillan},
+  	Year      = {2006},
+  	Editor    = {H.~Hassani and Terence C.~Mills and Kerry Patterson},
+  	Volume    = {1: Econometric Theory},
+  	Pages     = {278--352},
+  	Address   = {London}
+}
+
+@Book{knight:2014, 
+    Author    = {Frank H.~Knight},
+    Title     = {Risk, Uncertainty and Profit},
+    Publisher = {Martino Fine Books},
+    Year      = {2014},
+    Address   = {Eastford}
+}
+
+@Book{bernstein:1998, 
+    Author    = {Peter L.~Bernstein},
+    Title     = {Againts the Gods: The Remarkable Story of Risk},
+    Publisher = {John Wiley Sons},
+    Year      = {1998},
+    Address   = {New York, NY}
+}
+
+@Book{taleb:2007, 
+    Author    = {Nassim Nicholas Taleb},
+    Title     = {The Black Swan: The Impact of the Highly Improbable},
+    Publisher = {Random House},
+    Year      = {2007},
+    Address   = {New York, NY}
+}
+
+@Book{diebdoheherr:2010, 
+    Author    = {Francis X.~Diebold and Neil A.~Doherty and Richard J.~Herring},
+    Title     = {The Known, the Unknown, and the Unknowable in Financial Risk Management: Measurement and Theory Advancing Practice},
+    Publisher = {Princeton University Press},
+    Year      = {2010},
+    Address   = {New York, NY}
+}
+
+@Article{chrimottrost:2014,
+    Author  = {Lawrence J.~Christiano and Roberto Motto and  Massimo Rostagno},
+    Title   = {Risk Shocks},
+    Year    = {2014},
+    Journal = {American Economic Review},
+    Volume  = {104},
+    Number  = {1},
+    Pages   = {27--65},
+    DOI     = {10.1257/aer.104.1.27}
+}
+
+@Article{bekahoerduca:2013,
+    Author  = {Geert Bekaert and Marie Hoerova and Marco Lo Duca},
+    Title   = {Risk, Uncertainty and Monetary Policy},
+    Year    = {2013},
+    Journal = {Journal of Monetary Economics},
+    Volume  = {60},
+    Number  = {7},
+    Pages   = {771--788},
+    DOI     = {10.1016/j.jmoneco.2013.06.003}
 }
