--- a/index/00-Abstract.Rmd
+++ b/index/00-Abstract.Rmd
@@ -1,1 +1,1 @@
-I propose a monthly index of non-asset-market uncertainty. The index is constructed through a approximate dynamic factor model with several main uncertainty indexes as data. This strategy considerably reduces extreme movements in the level of uncertainty, which is more appealing with theory. Likewise, I compare the new index with indicators of uncertainty and estimate the impact of an uncertainty shock on the dynamics of macroeconomic variables.
+I propose a monthly index of non-asset-market uncertainty. The index is constructed through a approximate dynamic factor model with several main uncertainty indexes as data. This strategy considerably reduces extreme movements in the level of uncertainty, which is more appealing with theory. Likewise, I compare the new index with indicators of uncertainty and estimate the impact of an uncertainty shock on the dynamics of macroeconomic and financial variables.
