First full document.

--- a/index/02-Methodology.Rmd
+++ b/index/02-Methodology.Rmd
@@ -4,7 +4,7 @@ For the construction of the non-asset-market uncertainty index is necessary capt
 
 ## Dynamic factor model {#dynamic-factor-model}
 
-Following @stocwats:2016, the DFM represents the evolution of a vector of $N$ observed time series, $X_{t}$, in terms of a reduced number of unobserved common factors which evolve over time, plus uncorrelated disturbances which represent measurement error and/or idiosyncratic dynamics of the individual series. Throughout this chpater, we use lag operator, so that $a(L) = \sum_{i = 0}^{\infty} a_{i}L^{i}$, where $L$ is the lag operator, and $a(L)X_{t} = \sum_{i = 0}^{\infty} a_{i}X_{t - i}$.
+Following @stocwats:2016, the DFM represents the evolution of a vector of $N$ observed time series, $X_{t}$, in terms of a reduced number of unobserved common factors which evolve over time, plus uncorrelated disturbances which represent measurement error and/or idiosyncratic dynamics of the individual series. Throughout this chapter, we use lag operator, so that $a(L) = \sum_{i = 0}^{\infty} a_{i}L^{i}$, where $L$ is the lag operator, and $a(L)X_{t} = \sum_{i = 0}^{\infty} a_{i}X_{t - i}$.
 
 One form of write the model is its dynamic form which take into account the serial dependence in the data, i.e., represents the dependence of $X_{t}$ on lags of the factors explicitly.
 
@@ -18,9 +18,9 @@ The DFM expresses a $N \times 1$ vector $X_{t}$ of observed time series variable
   f_{t} & = & \Psi (L) f_{t} + \eta_{t} (\#eq:evolve)
 \end{eqnarray}
 
-where $X_{t} \stackrel{iid}{\sim} (0, \sum_{x})$ and the lag polynomial matrices $\lambda(L)$ and $\Psi(L)$ are $N \times q$ and $q \times q$, respectively. Also, $\eta_{t}$ is the $q \times 1$ vector of (serially uncorrelated) mean-zero innovations to the factors such that the factor innovations and the idiosyncratic disturbances are assumed to be orthogonal , i.e., $\mathbb{E}(e_{t}\eta_{s}') = 0 ~ \forall ~ t, s$. The $i$th row of $\lambda(L)$, the lag polynomial $\lambda_{i}(L)$, is called the dynamic factor loading for the $i$th series, $X_{it}$. The term $\lambda_{i}(L)f_{t}$ in \@ref(eq:common) is the *common component* of the $i$th series. Because in the basic model \@ref(eq:common) the observed variables are assumed to have mean zero the uncertainty indexes in [Data] are transformed prior to the analysis.
+where $X_{t} \stackrel{iid}{\sim} (0, \sum_{x})$ and the lag polynomial matrices $\lambda(L)$ and $\Psi(L)$ are $N \times q$ and $q \times q$, respectively. Also, $\eta_{t}$ is the $q \times 1$ vector of (serially uncorrelated) mean-zero innovations to the factors such that the factor innovations and the idiosyncratic disturbances are assumed to be orthogonal , i.e., $\mathbb{E}(e_{t}\eta_{s}') = 0 ~ \forall ~ t, s$. The $i$th row of $\lambda(L)$, the lag polynomial $\lambda_{i}(L)$, is called the dynamic factor loading for the $i$th series, $X_{it}$. The term $\lambda_{i}(L)f_{t}$ in \@ref(eq:common) is the *common component* of the $i$th series. Because in the basic model \@ref(eq:common) the observed variables are assumed to have mean zero the uncertainty indices in [Data] are transformed prior to the analysis.
 
-If the idiosyncratic disturbance $e_{t}$ in \@ref(eq:common) is serially correlated the models \@ref(eq:common) and \@ref(eq:evolve) are incompletely specified. @chamroth:1983 *aproximate factor model* allows for such correlation.
+If the idiosyncratic disturbance $e_{t}$ in \@ref(eq:common) is serially correlated the models \@ref(eq:common) and \@ref(eq:evolve) are incompletely specified. @chamroth:1983 *approximate factor model* allows for such correlation.
 
 ### Static (stacked) form of the DFM
 
@@ -92,7 +92,7 @@ For parametric estimation, additional assumptions need to be made on the distrib
 
 where $\nu_{it}$ is serially uncorrelated. With the further assumptions that $\nu_{it} \stackrel{iid}{\sim} \mathcal{N}(o, \sigma_{\nu_{i}}^{2})$ , $i = 1, \ldots, N$, and $\eta_{t} \stackrel{iid}{\sim} \mathcal{N}(0, \sum_{\eta})$, and $\{\nu_{t}\}$ and $\{\eta_{t}\}$ are independent, equations \@ref(eq:common), \@ref(eq:evolve) and \@ref(eq:ar) constitute a complete linear state-space model.
 
-Given the parameters, the Kalman filter can be used to compute the likelihood and the Kalman smoother can be used to compute estimates of $f_{t}$ given the full-sample data on $\{X_{t}\}$. The likelihood can be maximized to obtain maximum likelihood estimates of the parameters. The fact that the state-space approach uses intertemporal smoothing to estimate the factors, whereas principal components approachs use only contemporaneous smoothing (averaging across series at the same date) is an important difference between the methods.
+Given the parameters, the Kalman filter can be used to compute the likelihood and the Kalman smoother can be used to compute estimates of $f_{t}$ given the full-sample data on $\{X_{t}\}$. The likelihood can be maximized to obtain maximum likelihood estimates of the parameters. The fact that the state-space approach uses intertemporal smoothing to estimate the factors, whereas principal components approach use only contemporaneous smoothing (averaging across series at the same date) is an important difference between the methods.
 
 #### Hybrid methods
 
@@ -104,8 +104,10 @@ One way to handle the computational problem of maximum likelihood estimation of 
 
 It is necessary to choose the lag-order $p$ of the VAR models calculated in the next sections. First, defining the maximum lag order that is considered reasonable as $p_{max}$ and the minimum lag order $p_{min}$ set to zero one criterion is whether the lag-order estimator is consistent for the true lag-order $p_{0}$ where the DGP is VAR($p_{0}$), provided $p_{min} \leq p_{0} \leq p_{max}$. The Schwarz Information Criterion (SIC) and the Hannan-Quin Criterion (HQC) are consistent for $p_{0}$ in contrast to the Akaike Information Criterion (AIC) [@lutkepohl:2005]. 
 
-On the other hand, it is worthly examine the finite sample properties of the lag-order estimators. Even if we grant the premise that $p_{min} \leq p_{0} \leq p_{max}$, one may not want to overrate the importance of the lag-order estimator being consistent. The convergence of $\hat{p}$ toward $p_{0}$ can be very slow in practice, and in small samples consistent lag-order selection criteria tend to be strongly downbiased toward $p_{min}$ [@kilian:2001]. In small samples the distribution of the AIC lag-order estimates tends to be more balanced about the true lag order than for the remaining criteria [@kililutk:2017]. Likewise, because this study have no interest in the lag order of the process but impulse responses, forecast, and related statistics that can be written as smooth functions of VAR model parameters it is necessary assure that these statistics of interest can be consistenly estimated. They are consistently estimated as long as the lag order is not underestimated asymptotically. Besides, the probability of the AIC overfitting the VAR model is negligible asymptotically [@paultjos:1985]. So efficiency lost is not a major concern.
+On the other hand, it is worthy examine the finite sample properties of the lag-order estimators. Even if we grant the premise that $p_{min} \leq p_{0} \leq p_{max}$, one may not want to overrate the importance of the lag-order estimator being consistent. The convergence of $\hat{p}$ toward $p_{0}$ can be very slow in practice, and in small samples consistent lag-order selection criteria tend to be strongly downbiased toward $p_{min}$ [@kilian:2001]. In small samples the distribution of the AIC lag-order estimates tends to be more balanced about the true lag order than for the remaining criteria [@kililutk:2017]. Likewise, because this study have no interest in the lag order of the process but impulse responses, forecast, and related statistics that can be written as smooth functions of VAR model parameters it is necessary assure that these statistics of interest can be consistently estimated. They are consistently estimated as long as the lag order is not underestimated asymptotically. Besides, the probability of the AIC overfitting the VAR model is negligible asymptotically [@paultjos:1985]. So efficiency lost is not a major concern.
 
 Furthermore, the MSE of the impulse-response estimates is lower for models estimated with lags selected by the AIC in contrast with more parsimonious criteria as SIC and HQC [@ventlutz:2005]. 
 
-As a result, the relevant criteria used in this study is the AIC as it is the most reliable estimator of $p_{0}$ compared with other information criteria [@gonzpita:2002].
+<!--  as it is the most reliable estimator of $p_{0}$ compared with other information criteria [@gonzpita:2002]. -->
+
+Although the AIC seems to be the best option for select the lag order, Leeb \& Pötscher [-@leebpots:2005;-@leebpots:2006] questioned the inference using data-dependent lag-order selection procedure for VAR models. One alternative approach that avoids this problems is use models with fixed lags instead. As a result, fixed lag orders for all VAR models are used. Also, since the data is monthly the appropriate lag order is 12 months.
