--- a/index/bib/thesis.bib
+++ b/index/bib/thesis.bib
@@ -208,7 +208,7 @@
     DOI     = {10.1111/1467-9892.00107}
 }
 
-@Incollection{stocwats:2016,
+@Inbook{stocwats:2016,
     Author    = {James H.~Stock and Mark W.~Watson},
     Title     = {Dynamic Factor Models, Factor-Augmented Vector Autoregressions, and Structural Vector Autoregressions in Macroeconomics},
     Booktitle = {Handbook of Macroeconomics},
@@ -417,7 +417,7 @@
 }
 
 @Inbook{stocwats:1991,
-    Author    = {James Stock and Mark W.~Watson},
+    Author    = {James H.~Stock and Mark W.~Watson},
     Title     = {A Probability Model of the Coincident Economic Indicators},
     Booktitle = {The Leading Economic Indicators: New Approaches and Forecasting Records},
     Publisher = {Cambridge University Press},
@@ -428,7 +428,7 @@
 }
 
 @Inbook{stocwats:1993,
-    Author    = {James Stock and Mark W.~Watson},
+    Author    = {James H.~Stock and Mark W.~Watson},
   	Title     = {A Procedure for Predicting Recessions with Leading Indicators: Econometric Issues and Recent Experience},
   	Booktitle = {Business Cycles, Indicators and Forecasting},
   	Publisher = {University of Chicago Press},
@@ -472,7 +472,7 @@
 }
 
 @Article {stocwats:1999,
-    Author  = {James Stock and Mark W.~Watson},
+    Author  = {James H.~Stock and Mark W.~Watson},
     Title   = {Forecasting Inflation},
     Year    = {1999},
     Journal = {Journal of Monetary Economics},
@@ -616,4 +616,70 @@
     Number  = {7},
     Pages   = {771--788},
     DOI     = {10.1016/j.jmoneco.2013.06.003}
+}
+
+@Article{bloofloejaimsapoterr:2018,
+    Author  = {Nicholas Bloom and Max Floetotto and Nir Jaimovich and Itay Saporta-Eksten and Stephen J.~Terry},
+    Title   = {Really Uncertain Business Cycles},
+    Year    = {2018},
+    Journal = {Econometrica},
+    Volume  = {86},
+    Number  = {3},
+    Pages   = {1031--1065},
+    DOI     = {10.3982/ECTA10927}
+}
+
+@Article{scotti:2016,
+    Author  = {Chiara Scotti},
+    Title   = {Surprise and Uncertainty Indexes: Real-Time Aggregation of Real-Activity Macro-Surprises},
+    Year    = {2016},
+    Journal = {Journal of Monetary Economics},
+    Volume  = {82},
+    Pages   = {1--19},
+    DOI     = {10.1016/j.jmoneco.2016.06.002}
+}
+
+@Techreport{ludvmang:2015,
+    Title       = {Uncertainty and Business Cycles: Exogenous Impulse or Endogenous Response?},
+    Author      = {Sydney C.~Ludvigson and Sai Ma and Serena Ng},
+    Institution = {National Bureau of Economic Research {(NBER)}},
+    Type        = {Working Paper},
+    Series      = {Working Paper Series},
+    Number      = {21803},
+    Year        = {2015},
+    Month       = {December},
+    URL         = {http://www.nber.org/papers/w21803}
+}
+
+@Article{romer:1990,
+    Author  = {Christina D.~Romer},
+    Title   = {The Great Crash and the Onset of the Great Depression},
+    Year    = {1990},
+    Journal = {The Quarterly Journal of Economics},
+    Volume  = {105},
+    Number  = {3},
+    Pages   = {597--624},
+    DOI     = {10.2307/2937892}
+}
+
+@Article{bansyaro:2004,
+    Author  = {Ravi Bansal and Amir Yaron},
+    Title   = {Risks for the Long Run: A Potential Resolution of Asset Pricing Puzzles},
+    Year    = {2004},
+    Journal = {The Journal of Finance},
+    Volume  = {59},
+    Number  = {4},
+    Pages   = {1481--1509},
+    DOI     = {10.1111/j.1540-6261.2004.00670.x}
+}
+
+@Article{bernanke:1983,
+    Author  = {Ben S.~Bernanke},
+    Title   = {Irreversibility, Uncertainty, and Cyclical Investment},
+    Year    = {1983},
+    Journal = {The Quarterly Journal of Economics},
+    Volume  = {98},
+    Number  = {1},
+    Pages   = {85--106},
+    DOI     = {10.2307/1885568}
 }
