--- a/index/index.Rmd
+++ b/index/index.Rmd
@@ -4,7 +4,7 @@ date: "`r format(Sys.time(), '%B %Y')`"
 institution: "Universidad del Valle"
 division: "Social and Economic Sciences"
 advisor: "Jorge Mario Uribe Gil"
-department: "Faculty of Economics"
+department: "Economics"
 degree: "Bachelor of Economics"
 title: "Non-Asset-Market Uncertainty"
 knit: "bookdown::render_book"
